--- a/HalalGuide/Base.lproj/MainStoryboard.storyboard
+++ b/HalalGuide/Base.lproj/MainStoryboard.storyboard
@@ -95,6 +95,34 @@
             </objects>
             <point key="canvasLocation" x="918" y="1068"/>
         </scene>
+        <!--Enummer-->
+        <scene sceneID="B9N-SI-uzq">
+            <objects>
+                <viewController id="aKA-Iy-qfY" customClass="ENumberViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="15M-pv-Mly">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView multipleTouchEnabled="YES" contentMode="scaleToFill" scalesPageToFit="YES" id="oUY-bX-uu9">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="416"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="delegate" destination="aKA-Iy-qfY" id="KFK-y6-RKf"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Enummer" id="PaI-Hr-dFV"/>
+                    <connections>
+                        <outlet property="webView" destination="oUY-bX-uu9" id="fB7-BV-bgW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gIg-EU-yrT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="398" y="-542"/>
+        </scene>
         <!--HalalGuide-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
@@ -321,6 +349,9 @@
                                         <state key="normal" title="" image="ENumber">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="aKA-Iy-qfY" kind="push" id="h9o-v4-vMF"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Ogt-Fm-jwo">
                                         <rect key="frame" x="241" y="20" width="48" height="48"/>
@@ -563,7 +594,7 @@
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Navn" minimumFontSize="17" id="Geq-xg-rWm">
-                                                <rect key="frame" x="121" y="20" width="187" height="30"/>
+                                                <rect key="frame" x="121" y="20" width="187.00000016829546" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="no"/>
@@ -572,7 +603,7 @@
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" tag="101" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Vej" minimumFontSize="17" id="LGW-5Q-Byj" customClass="HTAutocompleteTextField">
-                                                <rect key="frame" x="121" y="58" width="132" height="30"/>
+                                                <rect key="frame" x="121" y="58" width="131.99999933441478" height="30"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
@@ -1463,7 +1494,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="Agj-FH-MAf"/>
-        <segue reference="SPP-c5-EFI"/>
+        <segue reference="bZb-Q1-MzK"/>
         <segue reference="lgj-e5-fFF"/>
         <segue reference="0rB-JO-B8E"/>
     </inferredMetricsTieBreakers>
