--- a/HalalGuide/Base.lproj/MainStoryboard.storyboard
+++ b/HalalGuide/Base.lproj/MainStoryboard.storyboard
@@ -884,12 +884,12 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <view contentMode="scaleToFill" id="Gza-tS-Krp" customClass="EDStarRating">
-                                            <rect key="frame" x="160.00000017373995" y="8" width="152" height="25"/>
+                                            <rect key="frame" x="160.00000019074321" y="8" width="152" height="25"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </view>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vKB-gc-7l7">
-                                            <rect key="frame" x="8" y="34" width="304.00000017373998" height="47"/>
+                                            <rect key="frame" x="8" y="34" width="304.00000019074321" height="47"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -1518,9 +1518,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="p48-EI-kol"/>
         <segue reference="Agj-FH-MAf"/>
         <segue reference="SPP-c5-EFI"/>
-        <segue reference="ZG9-AD-yQ5"/>
+        <segue reference="p48-EI-kol"/>
+        <segue reference="lgj-e5-fFF"/>
     </inferredMetricsTieBreakers>
 </document>
